--- a/tp_.ipynb
+++ b/tp_.ipynb
@@ -2,62 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "388\n",
-      "6\n",
-      "7\n"
+     "ename": "AttributeError",
+     "evalue": "module 'curacion' has no attribute 'target_1'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mmods\u001b[39;00m\n\u001b[1;32m      3\u001b[0m t1 \u001b[38;5;241m=\u001b[39m [] \n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mcc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtarget_1\u001b[49m)\n\u001b[1;32m      5\u001b[0m log_regr \u001b[38;5;241m=\u001b[39m mods\u001b[38;5;241m.\u001b[39mLogisticRegression()\n\u001b[1;32m      6\u001b[0m log_regr\u001b[38;5;241m.\u001b[39mfit(cc\u001b[38;5;241m.\u001b[39mData_1,t1)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'curacion' has no attribute 'target_1'"
      ]
     }
    ],
    "source": [
-    "import csv\n",
-    "import random\n",
-    "from imbalanced-learn import \n",
-    "\n",
-    "Data_1 = []\n",
-    "target = []\n",
-    "Data_2 = []\n",
-    "Data_3 = []\n",
-    "Data_4 = []\n",
-    "\n",
-    "\n",
-    "with open('breast_cancer_data/breast_cancer_dev.csv', mode='r', newline='') as file:\n",
-    "    csv_reader = csv.reader(file)\n",
-    "    i = 0\n",
-    "    \n",
-    "    for row in csv_reader:\n",
-    "        if i != 0:\n",
-    "            Data_1.append(row)\n",
-    "            Data_4.append(row[:-1])\n",
-    "            target.append(int(row[-1]))\n",
-    "\n",
-    "        i += 1\n",
-    "Data_2 = Data_1\n",
-    "Data_3 = Data_1\n",
-    "cont = 0\n",
-    "cont2 = 0\n",
-    "for i in target:\n",
-    "    if i == 0:\n",
-    "        cont += 1\n",
-    "    if i == 1:\n",
-    "        cont2 += 1\n",
-    "while len(Data_2) > 172:\n",
-    "    i = random.randint(0,len(Data_2)-1)\n",
-    "    if Data_2[i][-1] == '0':\n",
-    "        Data_2.pop(i)\n",
-    "\n",
-    "while len(Data_3) < 776:\n",
-    "    i = random.randint(0,len(Data_3)-1)\n",
-    "    if Data_3[i][-1] == '1':\n",
-    "        Data_3.append(Data_3[i])\n",
-    "\n",
-    "\n"
+    "import curacion as cc\n",
+    "import models as mods\n",
+    "t1 = [] \n",
+    "print(cc.target_1)\n",
+    "log_regr = mods.LogisticRegression()\n",
+    "log_regr.fit(cc.Data_1,t1)\n",
+    "log_regr.predict(cc.Data_1)"
    ]
   }
  ],
